cka-boledadian/09-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kucc8
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
  - name: consul
    image: consul:1.15.4
    ports:
    - containerPort: 8500
